# smartring-prod

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  doxygen  partitions.csv  sdkconfig  sdkconfig.old
components/smart_ring_ui/: CMakeLists.txt  Kconfig  changelog.txt  component.mk  smart_ring_ui.c  smart_ring_ui.h
components/smart_ring_ui/fonts/: sr_font_montserrat_12.c  sr_font_montserrat_14.c  sr_font_montserrat_16.c  sr_font_montserrat_16_bold.c  sr_font_montserrat_18.c  sr_font_montserrat_18_bold.c  sr_font_montserrat_22.c  sr_font_montserrat_24.c  sr_font_montserrat_26.c
components/smart_ring_ui/img/: ad1.c  cbre_logo.c  fonte_logo.c  icon_alert.c  icon_auto.c  icon_back.c  icon_bottle.c  icon_bottle_100.c  icon_bottle_25.c  icon_bottle_50.c  icon_bottle_75.c  icon_bottle_full_inv.c  icon_cog.c  icon_cup.c  icon_delivery_error.c  icon_delivery_ok.c  icon_device.c  icon_down_arrow.c  icon_home.c  icon_info.c  icon_logout.c  icon_manual.c  icon_signal.c  icon_signin.c  icon_smartring.c  icon_stable.c  icon_stock.c  icon_truck.c  icon_unstable.c  icon_user.c  origami_logo.c  spinner_check.c  wifi_signal_0.c  wifi_signal_1.c  wifi_signal_2.c  wifi_signal_3.c
components/smart_ring_ui/menus/: boot.c  boot.h  calibration.c  calibration.h  main.c  main.h  modal.c  modal.h  order.c  order.h  pin.c  pin.h  reset.c  reset.h  stock.c  stock.h  support.c  support.h  update.c  update.h
main/: CMakeLists.txt  component.mk
main/certs/: certificate.pem.crt  private.pem.key
main/certs/certs/: certificate.pem.crt  ota_root.pem  private.pem.key
main/certs/certs_34/: 9f09074597c41ed91c3416fe3581dda539ab0386731f312882d8ab455e0a6018-public.pem.key  certificate.pem.crt  private.pem.key
main/certs/certs_60/: 273ea026e55245f43fd828fbcf4d76b064874e2015bd3d315b3c3d8e1a3a232f-public.pem.key  certificate.pem.crt  private.pem.key
main/certs/certs_74/: 6c612dd9b582492e2f45907766c8bec4aed8409592896813872faf484c285ebc-public.pem.key  certificate.pem.crt  private.pem.key
main/certs/certs_8480/: certificate.crt  private.key
main/certs/certs_88/: 2f2a905f2added464bd051d9f84b4ed4cff6b8d29a385b6dea632ba73d67e892-public.pem.key  certificate.pem.crt  private.pem.key
main/certs/certs_90/: 1cfa3934f1961f49efed3e2823b9ec2713720f0b35098718a38e55f189b36e0e-public.pem.key  certificate.pem.crt  private.pem.key
main/certs/certs_98/: 29324d4755c324193887ed071f3ed6f4cb38aa567569cde6d2c31d2d171bceaa-public.pem.key  certificate.pem.crt  (+1 more)
main/include/: http_client.h  http_server.h  libs.h  mqtt.h  nvs.h  sensors.h  sleep.h  sntpprotocol.h  spiffs.h  vars.h  wifi.h
main/src/: http_client.c  http_server.c  main.c  mqtt.c  nvs.c  sensors.c  sleep.c  sntpprotocol.c  spiffs.c  vars.c  wifi.c
main/webpage/: app.js  index.css  index.html  jquery-3.6.0.min.js
(+372 files in other folders)
