# set(COMPONENT_SRCS)
# set(COMPONENT_ADD_INCLUDEDIRS "include")
# set(COMPONENT_REQUIRES "lvgl.h")
# register_component()
idf_component_register(SRCS "smart_ring_ui.c"
	"menus/boot.c"
	"menus/pin.c"
	"menus/modal.c"
	"menus/main.c"
	"menus/reset.c"
	"menus/support.c"
	"menus/stock.c"
	"menus/calibration.c"
	"menus/order.c"
	"menus/update.c"
	"img/wifi_signal_0.c"
	"img/wifi_signal_1.c"
	"img/wifi_signal_2.c"
	"img/wifi_signal_3.c"
	"img/ad1.c"
	"img/cbre_logo.c"
	"img/fonte_logo.c"
	"img/icon_alert.c"
	"img/icon_auto.c"
	"img/icon_back.c"
	"img/icon_bottle.c"
	"img/icon_bottle_25.c"
	"img/icon_bottle_50.c"
	"img/icon_bottle_75.c"
	"img/icon_bottle_100.c"
	"img/icon_bottle_full_inv.c"
	"img/icon_cog.c"
	"img/icon_cup.c"
	"img/icon_delivery_error.c"
	"img/icon_delivery_ok.c"
	"img/icon_device.c"
	"img/icon_down_arrow.c"
	"img/icon_home.c"
	"img/icon_info.c"
	"img/icon_logout.c"
	"img/icon_manual.c"
	"img/icon_signal.c"
	"img/icon_signin.c"
	"img/icon_smartring.c"
	"img/icon_stable.c"
	"img/icon_stock.c"
	"img/icon_truck.c"
	"img/icon_unstable.c"
	"img/icon_user.c"
	"img/origami_logo.c"
	"img/spinner_check.c"
	"fonts/sr_font_montserrat_12.c"
	"fonts/sr_font_montserrat_14.c"
	"fonts/sr_font_montserrat_16.c"
	"fonts/sr_font_montserrat_16_bold.c"
	"fonts/sr_font_montserrat_18.c"
	"fonts/sr_font_montserrat_18_bold.c"
	"fonts/sr_font_montserrat_22.c"
	"fonts/sr_font_montserrat_24.c"
	"fonts/sr_font_montserrat_26.c"
	INCLUDE_DIRS "." "menus" "img" "fonts"
	REQUIRES lvgl
)
